--- a/src/components/blog/PostPreview.astro
+++ b/src/components/blog/PostPreview.astro
@@ -18,4 +18,4 @@ const postDate = post.data.updatedDate ?? post.data.publishDate;
 		{post.data.title}
 	</a>
 </Tag>
-{withDesc && <span class="line-clamp-3 block">{post.data.description}</span>}
+{withDesc && <span class="line-clamp-3 block leading-8">{post.data.description}</span>}
