--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -82,7 +82,7 @@ const paginationProps = {
 						{uniqueTags.map((tag) => (
 							<li>
 								<a
-									class="flex items-center justify-center rounded-md bg-accent px-2 py-2 font-mono text-sm"
+									class="flex items-center justify-center rounded-full bg-gray-100 dark:bg-ghostindigo-800 px-2 py-2 font-mono text-sm text-black dark:text-white hover:bg-gray-200 hover:dark:bg-ghostindigo-700"
 									href={`/tags/${tag}/`}
 									aria-label={`View all posts with the tag: ${tag}`}
 								>
