--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -34,12 +34,12 @@
 	<button
 		type="button"
 		id="toggle-theme"
-		class="group relative h-9 w-9 rounded-md p-2 ring-zinc-400 transition-all hover:ring-2"
+		class="group relative h-9 w-9 rounded-md p-2 ring-gray-400 transition-all hover:ring-2"
 		aria-label="Toggle Dark Mode"
 	>
 		<svg
 			id="sun-svg"
-			class="absolute start-1/2 top-1/2 h-5 w-5 -translate-x-1/2 -translate-y-1/2 scale-0 opacity-0 transition-all group-aria-pressed:scale-100 group-aria-pressed:opacity-100"
+			class="absolute start-1/2 top-1/2 h-5 w-5 -translate-x-1/2 -translate-y-1/2 scale-0 delay-0 group-aria-pressed:scale-100 group-aria-pressed:opacity-100"
 			aria-hidden="true"
 			focusable="false"
 			stroke-width="1.5"
