--- a/src/pages/tags/[tag]/[...page].astro
+++ b/src/pages/tags/[tag]/[...page].astro
@@ -50,9 +50,9 @@ const paginationProps = {
 
 <PageLayout meta={meta}>
 	<h1 class="title mb-6 flex items-center">
-		<a href="/tags/" class="text-accent sm:hover:underline">Tags</a>
-		<span class="me-3 ms-2">→</span>
-		<span class="text-xl">#{tag}</span>
+		<a href="/tags/" class="text-2xl sm:hover:underline underline-offset-4">Tags</a>
+		<span class="me-3 ms-2 text-lg">→</span>
+		<span class="text-xl font-mono">#{tag}</span>
 	</h1>
 	<section aria-label="Blog post list">
 		<ul class="space-y-8">
