update og image fonts

--- a/src/components/SocialList.astro
+++ b/src/components/SocialList.astro
@@ -26,6 +26,11 @@ const socialLinks = [
 		friendlyName: "email",
 		link: "mailto:hello@shrirambalaji.com",
 	},
+		{
+		name: "mdi:rss",
+		friendlyName: "RSS Feed",
+		link: "/rss.xml"
+	},
 ];
 ---
 
