--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,11 +13,11 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 <PageLayout meta={{ title: "Home" }}>
 	<section>
 		<h1 class="title text-3xl mb-6 flex flex-wrap">
-			<p>Hello!&nbsp;</p>
-			<p class="md:mt-0 mt-2">I'm Shriram Balaji 👋</p>
+			<p class="leading-10">Hello!&nbsp;</p>
+			<p class="leading-10">I'm Shriram Balaji 👋</p>
 		</h1>
-		<p class="mb-4 leading-8 max-w-4xl">
-			I'm a software engineer currently working on M365 at Microsoft for the last couple of years. I usually blog about my learnings, thoughts and musings. It's a space where I express my ideas on topics I find interesting.
+		<p class="mb-4 leading-8 max-w-4xl flex flex-wrap">
+			I'm a software engineer currently working on M365 at Microsoft. I usually blog about my learnings, thoughts and musings. It's a space where I express my ideas on topics I find interesting.
 		</p>
 		<SocialList />
 	</section>
