--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -108,27 +108,6 @@
 	color: #111118;
 }
 
-.twitter-tweet:not(.twitter-tweet-rendered) {
-	border: 1px solid;
-	border-radius: 6px;
-	font-style: normal;
-}
-
-.twitter-tweet:not(.twitter-tweet-rendered) > :first-child {
-	margin-top: 0;
-}
-
-.twitter-tweet:not(.twitter-tweet-rendered) > :last-child {
-	margin-bottom: 0;
-}
-
-.twitter-tweet-rendered {
-	border-radius: 12px;
-}
-
-.tweet-embed iframe {
-	border-radius: 12px;
-}
 
 .dark img:not([src*=".svg"]) {
 	@apply brightness-50 contrast-50;
@@ -150,4 +129,58 @@
 .dark .shiki span {
 	color: var(--shiki-dark) !important;
 	background-color: hsl(var(--theme-bg)) !important;
+}
+
+/* astro-tweet dark theme */
+@media (prefers-color-scheme: dark) {
+	:where(.astro-tweet-theme) {
+		--tweet-border: 2px solid hsla(234, 100%, 83%, 0.233) !important;
+		--tweet-font-color: rgb(247, 249, 249);
+		--tweet-font-color-secondary: rgb(139, 152, 165);
+		--tweet-bg-color: hsl(240, 20%, 12%) !important;
+		--tweet-bg-color-hover: hsl(240 15% 10%) !important;
+		--tweet-color-blue-secondary:hsl(234, 94%, 80%) !important;
+		--tweet-color-blue-secondary-hover: hsla(234, 94%, 80%, 0.147) !important;
+	}
+}
+
+/* astro-tweet light theme */
+html:not(.dark) :where(.astro-tweet-theme) {
+	--tweet-border: 2px solid hsla(234, 100%, 83%, 0.233) !important;
+	--tweet-font-color: rgb(6, 6, 6);
+	--tweet-font-color-secondary: rgb(139, 152, 165);
+	--tweet-bg-color: hsl(240, 100%, 100%) !important;
+	--tweet-bg-color-hover: hsl(240, 41%, 97%) !important;
+	--tweet-color-blue-secondary: hsl(234, 100%, 75%) !important;
+	--tweet-verified-blue-color: hsl(234, 100%, 75%) !important;
+}
+
+@media (prefers-color-scheme: light) {
+	:where(.astro-tweet-theme) {
+		--tweet-border: 2px solid hsla(234, 100%, 83%, 0.233) !important;
+		--tweet-font-color: rgb(6, 6, 6);
+		--tweet-font-color-secondary: rgb(139, 152, 165);
+		--tweet-bg-color: hsl(240, 100%, 100%) !important;
+		--tweet-bg-color-hover: hsl(240, 41%, 97%) !important;
+		--tweet-color-blue-secondary: hsl(234, 100%, 75%) !important;
+		--tweet-verified-blue-color: hsl(234, 100%, 75%) !important;
+	}
+}
+
+.tweet-embed a img {
+	max-width: 100%;
+	max-height: 100%;
+	margin: 0;
+}
+
+.prose-lg p {
+	letter-spacing: -0.05px;
+	word-spacing: -0.05px;
+	margin-bottom: 1em;
+	font-size: 1em;
+}
+
+.prose-lg h2 {
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
