--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,21 +3,48 @@ import PageLayout from "@/layouts/Base";
 import PostPreview from "@/components/blog/PostPreview";
 import SocialList from "@/components/SocialList";
 import { getAllPosts, sortMDByDate } from "@/utils";
+import Avatar from "@/components/Avatar";
+import MicrosoftLogo from "@/components/MicrosoftLogo";
+import Icon from "astro-icon";
 
 const MAX_POSTS = 10;
 const allPosts = await getAllPosts();
 const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 
+const bio = {
+	name: "Shriram Balaji",
+};
+
+const currentWorkplace = {
+	title: "Software Engineer II",
+	company: "Microsoft",
+};
 ---
 
 <PageLayout meta={{ title: "Home" }}>
+	<div class="mt-2 flex max-w-5xl flex-col-reverse items-start md:flex-row">
+		<section class="flex w-full flex-col gap-3 md:placeholder:pr-8" role={"contentinfo"}>
+			<h1 class="ml-[-2px] text-3xl font-bold text-ghostindigo-900 dark:text-white md:text-5xl">
+				{bio.name}
+			</h1>
+			<h2
+				class="text-md inline-flex items-center text-gray-800 dark:text-gray-300 md:text-xl"
+			>
+				{currentWorkplace.title} at
+				<span
+					class="ml-2 inline-flex items-center gap-1.5 font-bold text-gray-800 dark:text-gray-300"
+				>
+					{currentWorkplace.company === "Microsoft" ? <MicrosoftLogo /> : currentWorkplace.company}
+				</span>
+			</h2>
+		</section>
+		<section class="mb-8 md:mb-0">
+			<Avatar />
+		</section>
+	</div>
 	<section>
-		<h1 class="title text-3xl mb-6 flex flex-wrap">
-			<p class="leading-10">Hello!&nbsp;</p>
-			<p class="leading-10">I'm Shriram Balaji 👋</p>
-		</h1>
-		<p class="mb-4 leading-8 max-w-4xl flex flex-wrap">
-			I'm a software engineer currently working on M365 at Microsoft. I usually blog about my learnings, thoughts and musings. It's a space where I express my ideas on topics I find interesting.
+		<p class="mb-4 mt-2 max-w-xl leading-8 sm:mt-0 sm:max-w-3xl">
+			Hello! I write about my learnings, thoughts and opinions in this blog.
 		</p>
 		<SocialList />
 	</section>
@@ -32,5 +59,12 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 				))
 			}
 		</ul>
+	</section>
+	<section class="mt-4">
+		<p class="text-sm">
+			<Icon class={"h-4 w-4 inline-block mb-1 mr-1 text-accent"} name={"mdi:rss"} aria-hidden="true" focusable="false" />
+			 Subscribe to updates via the
+			<a class="astro-link" href="/rss.xml"> Atom feed</a>
+		</p>
 	</section>
 </PageLayout>
