--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -12,11 +12,11 @@ const meta = {
 ---
 
 <PageLayout meta={meta}>
-	<h1 class="text-2xl font-semibold mb-6">Tags</h1>
+	<h1 class="mb-6 text-2xl font-semibold">Tags</h1>
 	<ul class="flex flex-row flex-wrap gap-3">
 		{
 			allTags.map(([tag, val]) => (
-				<li class="flex items-center gap-x-2 font-medium rounded-full px-2 py-2 bg-gray-100 dark:bg-ghostindigo-700 text-black dark:text-white">
+				<li class="flex items-center gap-x-2 rounded-3xl bg-gray-100 px-3 py-1.5 font-medium text-black dark:bg-ghostindigo-700 dark:text-white">
 					<a
 						class="inline-block font-mono text-sm"
 						href={`/tags/${tag}/`}
