--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -29,7 +29,11 @@ const pathname = new URL(Astro.request.url).pathname;
 	});
 </script>
 
-<header id="main-header" class="group relative mb-8 flex items-center" transition:persist>
+<header
+	id="main-header"
+	class={`group relative mb-8 flex items-center max-w-5xl ${pathname === "/" ? "xl:max-w-5xl" : "xl:max-w-6xl"}`}
+	transition:persist
+>
 	<div class="flex sm:flex-col">
 		<nav
 			id="navigation-menu"
@@ -42,7 +46,7 @@ const pathname = new URL(Astro.request.url).pathname;
 					return (
 						<a
 							href={link.path}
-							class={` dark:hover:bg-ghostindigo-800 w-full rounded-lg p-4 text-center transition-all hover:bg-gray-100 hover:backdrop-blur-xl sm:px-3 sm:py-2 md:w-20 text-black dark:text-white`}
+							class={`w-full rounded-lg py-3 text-center text-base text-black transition-all hover:bg-gray-100 hover:backdrop-blur-xl dark:text-white dark:hover:bg-ghostindigo-800 sm:w-20 sm:py-1`}
 							aria-current={isCurrent ? "page" : false}
 							rel="prefetch"
 						>
@@ -53,8 +57,6 @@ const pathname = new URL(Astro.request.url).pathname;
 			}
 		</nav>
 	</div>
-	<Search />
-	<ThemeToggle />
 	<button
 		id="toggle-navigation-menu"
 		class="group relative ms-4 h-7 w-7 sm:invisible sm:hidden"
@@ -91,4 +93,6 @@ const pathname = new URL(Astro.request.url).pathname;
 			<path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"></path>
 		</svg>
 	</button>
+	<Search />
+	<ThemeToggle />
 </header>
