--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -18,6 +18,7 @@ interface Props {
 const {
 	meta: { title, description = siteConfig.description, ogImage, articleDate },
 } = Astro.props;
+
 ---
 
 <html lang={siteConfig.lang}>
@@ -25,7 +26,7 @@ const {
 		<BaseHead title={title} description={description} ogImage={ogImage} articleDate={articleDate} />
 		<ViewTransitions />
 	</head>
-	<body>
+	<body class={Astro.url.pathname === "/" ? "px-6": ""}>
 		<ThemeProvider />
 		<SkipLink />
 		<Header />
