fix: header nav icon on mobile was offset on the left

--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -59,7 +59,7 @@ const pathname = new URL(Astro.request.url).pathname;
 	</div>
 	<button
 		id="toggle-navigation-menu"
-		class="group relative ms-4 h-7 w-7 sm:invisible sm:hidden"
+		class="group relative h-7 w-7 sm:invisible sm:hidden"
 		type="button"
 		aria-label="Open main menu"
 		aria-expanded="false"
