feat: add ThemedImage Astro component
* init blog about ThemedImage

--- a/src/components/ThemedImage.astro
+++ b/src/components/ThemedImage.astro
@@ -1,7 +1,4 @@
 ---
-import type { ImageMetadata } from "astro";
-import { Image } from "astro:assets";
-
 interface Props {
 	src: string;
 	darkSrc?: string;
@@ -10,7 +7,7 @@ interface Props {
 	age: number;
 }
 
-let { src, alt, name, age, darkSrc } = Astro.props;
+let { src, alt, darkSrc } = Astro.props;
 const images = import.meta.glob("/src/content/post/attachments/*.{jpeg,jpg,png,svg,gif}");
 
 if (!images[src]) {
@@ -27,21 +24,18 @@ if (darkSrc && !images[darkSrc]) {
 <img id="themed-image" src={src} alt={alt} data-dark-src={darkSrc} data-src={src} />
 
 <script is:inline>
-	function updateImageSrc() {
-		const isCurrentThemeDark = document.body.classList.contains("dark");
-		const isDarkMode =
-			isCurrentThemeDark || window.matchMedia && window.matchMedia("(prefers-color-scheme: dark)").matches;
+	function updateImageSrc(event) {
+		let isDarkMode = document.documentElement.classList.contains("dark");
+		if (event && event.detail?.theme === "dark") {
+            isDarkMode = true;
+        }
 		const img = document.getElementById("themed-image");
 		if (img && img.src) {
 			let attribute = isDarkMode ? img.getAttribute("data-dark-src") : img.getAttribute("data-src");
 			img.src = attribute ?? "";
 		}
 	}
-
 	window.addEventListener("DOMContentLoaded", updateImageSrc);
 	window.matchMedia("(prefers-color-scheme: dark)").addEventListener("change", updateImageSrc);
-
-	// / Observe changes to the classList of the body element
-	const observer = new MutationObserver(updateImageSrc);
-	observer.observe(document.body, { attributes: true, attributeFilter: ["class"] });
+	document.addEventListener("theme-change", updateImageSrc); // Listen to the "theme-change" event
 </script>
