fix: ViewTransitions causing image flicker; make themedimage load smoothly

--- a/src/components/ThemedImage.astro
+++ b/src/components/ThemedImage.astro
@@ -19,28 +19,55 @@ if (!images[src]) {
 if (darkSrc && !images[darkSrc]) {
 	darkSrc = src;
 }
+
+// @ts-ignore
+const { border, borderDashed, ...themedImageProps } = Astro.props;
 ---
 
 <!-- pass all props to img -->
-<img id="themed-image" {...Astro.props} src={src} alt={alt} data-dark-src={darkSrc} data-src={src} />
+<img
+	id="themed-image"
+	{...themedImageProps}
+	class:list={[
+		{
+			"border-2 border-indigo-300 dark:border-ghostindigo-600": border,
+			"border-2 border-dashed border-indigo-300 dark:border-ghostindigo-600": borderDashed,
+		},
+	]}
+	src={src}
+	alt={alt}
+	data-dark-src={darkSrc}
+	data-src={src}
+/>
 
-<script is:inline>
+<script is:inline data-astro-rerun>
 	function updateImageSrc(event) {
 		let isDarkMode = document.documentElement.classList.contains("dark");
 		if (event && event.detail?.theme === "dark") {
 			isDarkMode = true;
 		}
 		const images = document.querySelectorAll("#themed-image");
+
 		for (const img of images) {
 			if (img && img.src) {
 				let attribute = isDarkMode
 					? img.getAttribute("data-dark-src")
 					: img.getAttribute("data-src");
 				img.src = attribute ?? "";
+
+				img.onload = () => {
+					img.style.opacity = 1;
+				};
 			}
 		}
 	}
-	window.addEventListener("DOMContentLoaded", updateImageSrc);
-	// window.matchMedia("(prefers-color-scheme: dark)").addEventListener("change", updateImageSrc);
+
+	// load the correct image based on the user's theme
+	window.matchMedia("(prefers-color-scheme: dark)").addEventListener("change", updateImageSrc);
+
+	// listen for theme changes
 	document.addEventListener("theme-change", updateImageSrc);
+
+	// works with view transitions as well, whereas DOMContentLoaded does not
+	document.addEventListener("astro:page-load", updateImageSrc);
 </script>
