--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -1,3 +1,4 @@
+
 <script>
 	class ThemeToggle extends HTMLElement {
 		constructor() {
@@ -124,9 +125,11 @@
 	})();
 
 	if (theme === "light") {
+		document.documentElement.setAttribute("data-theme", "min-light");
 		document.documentElement.classList.remove("dark");
 	} else {
 		document.documentElement.classList.add("dark");
+		document.documentElement.setAttribute("data-theme", "min-dark");
 	}
 
 	window.localStorage.setItem("theme", theme);
@@ -136,6 +139,7 @@
 		element.classList.toggle("dark");
 
 		const isDark = element.classList.contains("dark");
+		element.setAttribute("data-theme", isDark ? "min-dark" : "min-light");
 		localStorage.setItem("theme", isDark ? "dark" : "light");
 	};
 
