add linkerland devlog; support callouts; support multilevel folder structuring for slugs

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import { getAllPosts, sortMDByDate } from "@/utils";
 import Avatar from "@/components/Avatar";
 import MicrosoftLogo from "@/components/MicrosoftLogo";
 import Icon from "astro-icon";
+import "@microflash/remark-callout-directives/theme/github"
 
 const MAX_POSTS = 10;
 const allPosts = await getAllPosts();
